Fixing spacing after adding category javascript

--- a/server/view/css/contentPage.css
+++ b/server/view/css/contentPage.css
@@ -289,6 +289,7 @@ a {
     height:70%;
     float: left;
     overflow: scroll;
+    resize: none;
 }
 #editContent #previewPane {
     float: right;
